# strongswan-epdg

./: README.md  configure.ac
conf/: Makefile.am
conf/plugins/: vectorcore-eap-proxy.opt
src/libcharon/: Makefile.am
src/libcharon/plugins/vectorcore_eap_proxy/: Makefile.am  vectorcore_eap_proxy.c  vectorcore_eap_proxy.h  vectorcore_eap_proxy_ipc.c  vectorcore_eap_proxy_ipc.h  vectorcore_eap_proxy_plugin.c  vectorcore_eap_proxy_plugin.h
